SCSS_Compiler/ProgettoEsempio/build/y.output
Terminale, die in Grammatik unbenutzt sind

    OP_EXP
    IF
    THEN
    ELSE
    EXIT
    RETURN
    QUIT
    OP_COMP


Grammatik

    0 $accept: LINE $end

    1 LINE: STMT SEMI LINE
    2     | STMT SEMI
    3     | SEMI LINE
    4     | error SEMI LINE

    5 STMT: DECL
    6     | ASSIGN
    7     | MEXPR

    8 DECL: DECL_TYPE ID
    9     | DECL_TYPE ID OP_ASSIGN MEXPR

   10 DECL_TYPE: VAR_TYPE
   11          | CMP_TYPE

   12 MEXPR: MEXPR OP_PLUS MEXPR
   13      | MEXPR OP_MINUS MEXPR
   14      | MEXPR OP_MULT MEXPR
   15      | MEXPR OP_DIV MEXPR
   16      | LP MEXPR RP
   17      | MEXPR OP_I MEXPR
   18      | OP_MINUS MEXPR
   19      | ID
   20      | NUM

   21 ASSIGN: ID OP_ASSIGN MEXPR


Terminale und die Regeln, in denen sie verwendet werden

    $end (0) 0
    error (256) 4
    LP (258) 16
    RP (259) 16
    NUM <value> (260) 20
    SEMI (261) 1 2 3 4
    OP_ASSIGN (262) 9 21
    OP_EXP (263)
    IF (264)
    THEN (265)
    ELSE (266)
    ID <symbol> (267) 8 9 19 21
    EXIT (268)
    RETURN (269)
    QUIT (270)
    OP_COMP (271)
    VAR_TYPE (272) 10
    CMP_TYPE (273) 11
    OP_MINUS (274) 13 18
    OP_PLUS (275) 12
    OP_MULT (276) 14
    OP_DIV (277) 15
    UMINUS (278)
    OP_I (279) 17


Nicht-Terminal und die Regeln, in denen sie verwendet werden

    $accept (25)
        auf der linken Seite: 0
    LINE (26)
        auf der linken Seite: 1 2 3 4
        auf der rechten Seite: 0 1 3 4
    STMT (27)
        auf der linken Seite: 5 6 7
        auf der rechten Seite: 1 2
    DECL (28)
        auf der linken Seite: 8 9
        auf der rechten Seite: 5
    DECL_TYPE <varType> (29)
        auf der linken Seite: 10 11
        auf der rechten Seite: 8 9
    MEXPR <symbol> (30)
        auf der linken Seite: 12 13 14 15 16 17 18 19 20
        auf der rechten Seite: 7 9 12 13 14 15 16 17 18 21
    ASSIGN (31)
        auf der linken Seite: 21
        auf der rechten Seite: 6


Zustand 0

    0 $accept: . LINE $end

    error     schiebe und gehe zu Zustand 1 über
    LP        schiebe und gehe zu Zustand 2 über
    NUM       schiebe und gehe zu Zustand 3 über
    SEMI      schiebe und gehe zu Zustand 4 über
    ID        schiebe und gehe zu Zustand 5 über
    VAR_TYPE  schiebe und gehe zu Zustand 6 über
    CMP_TYPE  schiebe und gehe zu Zustand 7 über
    OP_MINUS  schiebe und gehe zu Zustand 8 über

    LINE       gehe zu Zustand 9 über
    STMT       gehe zu Zustand 10 über
    DECL       gehe zu Zustand 11 über
    DECL_TYPE  gehe zu Zustand 12 über
    MEXPR      gehe zu Zustand 13 über
    ASSIGN     gehe zu Zustand 14 über


Zustand 1

    4 LINE: error . SEMI LINE

    SEMI  schiebe und gehe zu Zustand 15 über


Zustand 2

   16 MEXPR: LP . MEXPR RP

    LP        schiebe und gehe zu Zustand 2 über
    NUM       schiebe und gehe zu Zustand 3 über
    ID        schiebe und gehe zu Zustand 16 über
    OP_MINUS  schiebe und gehe zu Zustand 8 über

    MEXPR  gehe zu Zustand 17 über


Zustand 3

   20 MEXPR: NUM .

    $default  reduziere mit Regel 20 (MEXPR)


Zustand 4

    3 LINE: SEMI . LINE

    error     schiebe und gehe zu Zustand 1 über
    LP        schiebe und gehe zu Zustand 2 über
    NUM       schiebe und gehe zu Zustand 3 über
    SEMI      schiebe und gehe zu Zustand 4 über
    ID        schiebe und gehe zu Zustand 5 über
    VAR_TYPE  schiebe und gehe zu Zustand 6 über
    CMP_TYPE  schiebe und gehe zu Zustand 7 über
    OP_MINUS  schiebe und gehe zu Zustand 8 über

    LINE       gehe zu Zustand 18 über
    STMT       gehe zu Zustand 10 über
    DECL       gehe zu Zustand 11 über
    DECL_TYPE  gehe zu Zustand 12 über
    MEXPR      gehe zu Zustand 13 über
    ASSIGN     gehe zu Zustand 14 über


Zustand 5

   19 MEXPR: ID .
   21 ASSIGN: ID . OP_ASSIGN MEXPR

    OP_ASSIGN  schiebe und gehe zu Zustand 19 über

    $default  reduziere mit Regel 19 (MEXPR)


Zustand 6

   10 DECL_TYPE: VAR_TYPE .

    $default  reduziere mit Regel 10 (DECL_TYPE)


Zustand 7

   11 DECL_TYPE: CMP_TYPE .

    $default  reduziere mit Regel 11 (DECL_TYPE)


Zustand 8

   18 MEXPR: OP_MINUS . MEXPR

    LP        schiebe und gehe zu Zustand 2 über
    NUM       schiebe und gehe zu Zustand 3 über
    ID        schiebe und gehe zu Zustand 16 über
    OP_MINUS  schiebe und gehe zu Zustand 8 über

    MEXPR  gehe zu Zustand 20 über


Zustand 9

    0 $accept: LINE . $end

    $end  schiebe und gehe zu Zustand 21 über


Zustand 10

    1 LINE: STMT . SEMI LINE
    2     | STMT . SEMI

    SEMI  schiebe und gehe zu Zustand 22 über


Zustand 11

    5 STMT: DECL .

    $default  reduziere mit Regel 5 (STMT)


Zustand 12

    8 DECL: DECL_TYPE . ID
    9     | DECL_TYPE . ID OP_ASSIGN MEXPR

    ID  schiebe und gehe zu Zustand 23 über


Zustand 13

    7 STMT: MEXPR .
   12 MEXPR: MEXPR . OP_PLUS MEXPR
   13      | MEXPR . OP_MINUS MEXPR
   14      | MEXPR . OP_MULT MEXPR
   15      | MEXPR . OP_DIV MEXPR
   17      | MEXPR . OP_I MEXPR

    OP_MINUS  schiebe und gehe zu Zustand 24 über
    OP_PLUS   schiebe und gehe zu Zustand 25 über
    OP_MULT   schiebe und gehe zu Zustand 26 über
    OP_DIV    schiebe und gehe zu Zustand 27 über
    OP_I      schiebe und gehe zu Zustand 28 über

    $default  reduziere mit Regel 7 (STMT)


Zustand 14

    6 STMT: ASSIGN .

    $default  reduziere mit Regel 6 (STMT)


Zustand 15

    4 LINE: error SEMI . LINE

    error     schiebe und gehe zu Zustand 1 über
    LP        schiebe und gehe zu Zustand 2 über
    NUM       schiebe und gehe zu Zustand 3 über
    SEMI      schiebe und gehe zu Zustand 4 über
    ID        schiebe und gehe zu Zustand 5 über
    VAR_TYPE  schiebe und gehe zu Zustand 6 über
    CMP_TYPE  schiebe und gehe zu Zustand 7 über
    OP_MINUS  schiebe und gehe zu Zustand 8 über

    LINE       gehe zu Zustand 29 über
    STMT       gehe zu Zustand 10 über
    DECL       gehe zu Zustand 11 über
    DECL_TYPE  gehe zu Zustand 12 über
    MEXPR      gehe zu Zustand 13 über
    ASSIGN     gehe zu Zustand 14 über


Zustand 16

   19 MEXPR: ID .

    $default  reduziere mit Regel 19 (MEXPR)


Zustand 17

   12 MEXPR: MEXPR . OP_PLUS MEXPR
   13      | MEXPR . OP_MINUS MEXPR
   14      | MEXPR . OP_MULT MEXPR
   15      | MEXPR . OP_DIV MEXPR
   16      | LP MEXPR . RP
   17      | MEXPR . OP_I MEXPR

    RP        schiebe und gehe zu Zustand 30 über
    OP_MINUS  schiebe und gehe zu Zustand 24 über
    OP_PLUS   schiebe und gehe zu Zustand 25 über
    OP_MULT   schiebe und gehe zu Zustand 26 über
    OP_DIV    schiebe und gehe zu Zustand 27 über
    OP_I      schiebe und gehe zu Zustand 28 über


Zustand 18

    3 LINE: SEMI LINE .

    $default  reduziere mit Regel 3 (LINE)


Zustand 19

   21 ASSIGN: ID OP_ASSIGN . MEXPR

    LP        schiebe und gehe zu Zustand 2 über
    NUM       schiebe und gehe zu Zustand 3 über
    ID        schiebe und gehe zu Zustand 16 über
    OP_MINUS  schiebe und gehe zu Zustand 8 über

    MEXPR  gehe zu Zustand 31 über


Zustand 20

   12 MEXPR: MEXPR . OP_PLUS MEXPR
   13      | MEXPR . OP_MINUS MEXPR
   14      | MEXPR . OP_MULT MEXPR
   15      | MEXPR . OP_DIV MEXPR
   17      | MEXPR . OP_I MEXPR
   18      | OP_MINUS MEXPR .

    OP_I  schiebe und gehe zu Zustand 28 über

    $default  reduziere mit Regel 18 (MEXPR)


Zustand 21

    0 $accept: LINE $end .

    $default  annehmen


Zustand 22

    1 LINE: STMT SEMI . LINE
    2     | STMT SEMI .

    error     schiebe und gehe zu Zustand 1 über
    LP        schiebe und gehe zu Zustand 2 über
    NUM       schiebe und gehe zu Zustand 3 über
    SEMI      schiebe und gehe zu Zustand 4 über
    ID        schiebe und gehe zu Zustand 5 über
    VAR_TYPE  schiebe und gehe zu Zustand 6 über
    CMP_TYPE  schiebe und gehe zu Zustand 7 über
    OP_MINUS  schiebe und gehe zu Zustand 8 über

    $end  reduziere mit Regel 2 (LINE)

    LINE       gehe zu Zustand 32 über
    STMT       gehe zu Zustand 10 über
    DECL       gehe zu Zustand 11 über
    DECL_TYPE  gehe zu Zustand 12 über
    MEXPR      gehe zu Zustand 13 über
    ASSIGN     gehe zu Zustand 14 über


Zustand 23

    8 DECL: DECL_TYPE ID .
    9     | DECL_TYPE ID . OP_ASSIGN MEXPR

    OP_ASSIGN  schiebe und gehe zu Zustand 33 über

    $default  reduziere mit Regel 8 (DECL)


Zustand 24

   13 MEXPR: MEXPR OP_MINUS . MEXPR

    LP        schiebe und gehe zu Zustand 2 über
    NUM       schiebe und gehe zu Zustand 3 über
    ID        schiebe und gehe zu Zustand 16 über
    OP_MINUS  schiebe und gehe zu Zustand 8 über

    MEXPR  gehe zu Zustand 34 über


Zustand 25

   12 MEXPR: MEXPR OP_PLUS . MEXPR

    LP        schiebe und gehe zu Zustand 2 über
    NUM       schiebe und gehe zu Zustand 3 über
    ID        schiebe und gehe zu Zustand 16 über
    OP_MINUS  schiebe und gehe zu Zustand 8 über

    MEXPR  gehe zu Zustand 35 über


Zustand 26

   14 MEXPR: MEXPR OP_MULT . MEXPR

    LP        schiebe und gehe zu Zustand 2 über
    NUM       schiebe und gehe zu Zustand 3 über
    ID        schiebe und gehe zu Zustand 16 über
    OP_MINUS  schiebe und gehe zu Zustand 8 über

    MEXPR  gehe zu Zustand 36 über


Zustand 27

   15 MEXPR: MEXPR OP_DIV . MEXPR

    LP        schiebe und gehe zu Zustand 2 über
    NUM       schiebe und gehe zu Zustand 3 über
    ID        schiebe und gehe zu Zustand 16 über
    OP_MINUS  schiebe und gehe zu Zustand 8 über

    MEXPR  gehe zu Zustand 37 über


Zustand 28

   17 MEXPR: MEXPR OP_I . MEXPR

    LP        schiebe und gehe zu Zustand 2 über
    NUM       schiebe und gehe zu Zustand 3 über
    ID        schiebe und gehe zu Zustand 16 über
    OP_MINUS  schiebe und gehe zu Zustand 8 über

    MEXPR  gehe zu Zustand 38 über


Zustand 29

    4 LINE: error SEMI LINE .

    $default  reduziere mit Regel 4 (LINE)


Zustand 30

   16 MEXPR: LP MEXPR RP .

    $default  reduziere mit Regel 16 (MEXPR)


Zustand 31

   12 MEXPR: MEXPR . OP_PLUS MEXPR
   13      | MEXPR . OP_MINUS MEXPR
   14      | MEXPR . OP_MULT MEXPR
   15      | MEXPR . OP_DIV MEXPR
   17      | MEXPR . OP_I MEXPR
   21 ASSIGN: ID OP_ASSIGN MEXPR .

    OP_MINUS  schiebe und gehe zu Zustand 24 über
    OP_PLUS   schiebe und gehe zu Zustand 25 über
    OP_MULT   schiebe und gehe zu Zustand 26 über
    OP_DIV    schiebe und gehe zu Zustand 27 über
    OP_I      schiebe und gehe zu Zustand 28 über

    $default  reduziere mit Regel 21 (ASSIGN)


Zustand 32

    1 LINE: STMT SEMI LINE .

    $default  reduziere mit Regel 1 (LINE)


Zustand 33

    9 DECL: DECL_TYPE ID OP_ASSIGN . MEXPR

    LP        schiebe und gehe zu Zustand 2 über
    NUM       schiebe und gehe zu Zustand 3 über
    ID        schiebe und gehe zu Zustand 16 über
    OP_MINUS  schiebe und gehe zu Zustand 8 über

    MEXPR  gehe zu Zustand 39 über


Zustand 34

   12 MEXPR: MEXPR . OP_PLUS MEXPR
   13      | MEXPR . OP_MINUS MEXPR
   13      | MEXPR OP_MINUS MEXPR .
   14      | MEXPR . OP_MULT MEXPR
   15      | MEXPR . OP_DIV MEXPR
   17      | MEXPR . OP_I MEXPR

    OP_MULT  schiebe und gehe zu Zustand 26 über
    OP_DIV   schiebe und gehe zu Zustand 27 über
    OP_I     schiebe und gehe zu Zustand 28 über

    $default  reduziere mit Regel 13 (MEXPR)


Zustand 35

   12 MEXPR: MEXPR . OP_PLUS MEXPR
   12      | MEXPR OP_PLUS MEXPR .
   13      | MEXPR . OP_MINUS MEXPR
   14      | MEXPR . OP_MULT MEXPR
   15      | MEXPR . OP_DIV MEXPR
   17      | MEXPR . OP_I MEXPR

    OP_MULT  schiebe und gehe zu Zustand 26 über
    OP_DIV   schiebe und gehe zu Zustand 27 über
    OP_I     schiebe und gehe zu Zustand 28 über

    $default  reduziere mit Regel 12 (MEXPR)


Zustand 36

   12 MEXPR: MEXPR . OP_PLUS MEXPR
   13      | MEXPR . OP_MINUS MEXPR
   14      | MEXPR . OP_MULT MEXPR
   14      | MEXPR OP_MULT MEXPR .
   15      | MEXPR . OP_DIV MEXPR
   17      | MEXPR . OP_I MEXPR

    OP_I  schiebe und gehe zu Zustand 28 über

    $default  reduziere mit Regel 14 (MEXPR)


Zustand 37

   12 MEXPR: MEXPR . OP_PLUS MEXPR
   13      | MEXPR . OP_MINUS MEXPR
   14      | MEXPR . OP_MULT MEXPR
   15      | MEXPR . OP_DIV MEXPR
   15      | MEXPR OP_DIV MEXPR .
   17      | MEXPR . OP_I MEXPR

    OP_I  schiebe und gehe zu Zustand 28 über

    $default  reduziere mit Regel 15 (MEXPR)


Zustand 38

   12 MEXPR: MEXPR . OP_PLUS MEXPR
   13      | MEXPR . OP_MINUS MEXPR
   14      | MEXPR . OP_MULT MEXPR
   15      | MEXPR . OP_DIV MEXPR
   17      | MEXPR . OP_I MEXPR
   17      | MEXPR OP_I MEXPR .

    OP_I  schiebe und gehe zu Zustand 28 über

    $default  reduziere mit Regel 17 (MEXPR)


Zustand 39

    9 DECL: DECL_TYPE ID OP_ASSIGN MEXPR .
   12 MEXPR: MEXPR . OP_PLUS MEXPR
   13      | MEXPR . OP_MINUS MEXPR
   14      | MEXPR . OP_MULT MEXPR
   15      | MEXPR . OP_DIV MEXPR
   17      | MEXPR . OP_I MEXPR

    OP_MINUS  schiebe und gehe zu Zustand 24 über
    OP_PLUS   schiebe und gehe zu Zustand 25 über
    OP_MULT   schiebe und gehe zu Zustand 26 über
    OP_DIV    schiebe und gehe zu Zustand 27 über
    OP_I      schiebe und gehe zu Zustand 28 über

    $default  reduziere mit Regel 9 (DECL)
